third_party/move/move-prover/tests/sources/functional/enum_generic.exp
Move prover returns: exiting with model building errors
error: unsupported language construct
  ┌─ tests/sources/functional/enum_generic.move:3:5
  │
3 │     enum CommonFields<U> has copy, drop {
  │     ^^^^ Move 2 language construct is not enabled: enum types

error: unsupported language construct
  ┌─ tests/sources/functional/enum_generic.move:8:5
  │
8 │     enum CommonFieldsVector<T, U> has drop {
  │     ^^^^ Move 2 language construct is not enabled: enum types
